--- a/AI-Ex.ipynb
+++ b/AI-Ex.ipynb
@@ -213,13 +213,52 @@
     "    Does not get trapped by loops.\n",
     "    If two paths reach a state, only use the first one.\n",
     "    \"\"\"\n",
-    "    \n",
+    "    \"\"\"\n",
+    "    This initializes a frontier list with a single node representing the initial state of the agent. \n",
+    "    This is a stack, so nodes will be added and removed from the end of the list.\n",
+    "    \"\"\"\n",
     "    frontier = [(Node(agent.initial_state))]  # Stack\n",
     "\n",
-    "    explored = []\n",
+    "    # Team init\n",
+    "\n",
+    "\n",
+    "    # This initializes an empty set to keep track of the explored states\n",
+    "    explored = set()\n",
+    "\n",
+    "    # This starts a loop that continues until the frontier is not empty.\n",
     "    while frontier:\n",
-    "        pass\n",
+    "\n",
+    "        # This pops the last element from the frontier list, \n",
+    "        # which represents the deepest unexplored node in the search tree.\n",
+    "\n",
+    "        node = frontier.pop()\n",
+    "\n",
+    "        # This checks if the state of the node is the goal state, \n",
+    "        # and if so, returns the path from the initial state to the\n",
+    "        # goal state using the node.path() method.\n",
+    "        \n",
+    "        if node.state == agent.goal_state:\n",
+    "            return node.path()  # return the path to the goal node\n",
+    "        \n",
+    "        # This adds the state of the node to the explored set.\n",
+    "        explored.add(node.state)\n",
+    "        \n",
+    "        # This loops through the possible successor states, \n",
+    "        # actions, and costs using the agent.possible_moves() method.\n",
+    "\n",
+    "        for succ_state, succ_action, succ_cost in agent.possible_moves():\n",
+    "            # This checks if the successor state has not been explored before.\n",
+    "            if succ_state not in explored:\n",
+    "                # This creates a new Node object representing the successor state, \n",
+    "                # with the node as the parent, the succ_action as the action taken \n",
+    "                # to reach the state, and succ_cost as the cost of the action.\n",
+    "                child_node = Node(succ_state, node, succ_action, succ_cost)\n",
+    "                # This adds the child_node to the end of the frontier list.\n",
+    "                frontier.append(child_node)\n",
+    "    # If the frontier becomes empty, the search has failed and None is returned.\n",
     "    return None\n",
+    "\n",
+    "    # Team final\n",
     "\n",
     "def breadth_first_graph_search(agent):\n",
     "    #TODO\n",
@@ -299,6 +338,249 @@
     "\n",
     "for i in range(map_copy.shape[0]):\n",
     "    print(map_copy[i,:])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pruebas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "class Agent:\n",
+    "\n",
+    "    def __init__(self, world, costs, initial_state, goal_state):\n",
+    "        \n",
+    "        # [0,1] --> 1 UP\n",
+    "        # [0,-1] --> 1 Down\n",
+    "        # [-1,0] --> 1 Left\n",
+    "        # [1,0] --> 1 right\n",
+    "\n",
+    "        self.moves = np.array([[0,1], [0,-1], [-1,0], [1,0]])\n",
+    "        self.initial_state = initial_state\n",
+    "        self.goal_state = goal_state\n",
+    "        self.current_state = initial_state\n",
+    "        self.world = world\n",
+    "        self.costs = costs\n",
+    "\n",
+    "    def possible_moves(self):\n",
+    "        \"\"\"\n",
+    "         input: \n",
+    "        \n",
+    "                Current state of the world\n",
+    "                Set of moves\n",
+    "        \"\"\"\n",
+    "\n",
+    "        succ_states, succ_actions, succ_costs = [],[],[]\n",
+    "\n",
+    "        for move in self.moves:\n",
+    "\n",
+    "            # check that the next state is in the range of the world\n",
+    "            #print(self.current_state)\n",
+    "\n",
+    "            # shape[0] --> rows\n",
+    "            # shape[1] --> columns\n",
+    "\n",
+    "            # self.current_state[0] is x axis \n",
+    "            # self.world.shape[0] is last row (X)\n",
+    "\n",
+    "            # 0 <= self.current_state[0] + move[0] < self.world.shape[0] is X boundaries\n",
+    "            # 0 <= self.current_state[1] + move[1] < self.world.shape[1] is Y boundaries\n",
+    "\n",
+    "            if 0 <= self.current_state[0] + move[0] < self.world.shape[0] and 0 <= self.current_state[1] + move[1] < self.world.shape[1]:\n",
+    "\n",
+    "                # move and assign new_state to the position after moving\n",
+    "                new_state = [self.current_state[0] + move[0], self.current_state[1] + move[1]]\n",
+    "\n",
+    "                action = [move[0], move[1]]\n",
+    "\n",
+    "                cost = self.costs[self.world[new_state[0], new_state[1]]]\n",
+    "\n",
+    "                succ_states.append(new_state)\n",
+    "                succ_actions.append(action)\n",
+    "                succ_costs.append(cost)\n",
+    "\n",
+    "        \"\"\"\n",
+    "         output: \n",
+    "                List of possible successor states, actions, and costs.\n",
+    "        \"\"\"\n",
+    "        return succ_states, succ_actions, succ_costs\n",
+    "\n",
+    "\n",
+    "    def set_current_state(self, nex_state):\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        output:\n",
+    "                new state\n",
+    "        \"\"\"\n",
+    "        self.current_state = nex_state\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class Node:\n",
+    "\n",
+    "    def __init__(self, state, parent=None, action=None, cost=None):\n",
+    "        \"\"\"Create a search tree Node, derived from a parent by an action.\"\"\"\n",
+    "        self.state = state\n",
+    "        self.parent = parent\n",
+    "        self.action = action\n",
+    "        #self.cost = cost\n",
+    "\n",
+    "        self.depth = 0\n",
+    "        self.path_cost = 0\n",
+    "\n",
+    "        if parent:\n",
+    "            self.path_cost = parent.path_cost + cost\n",
+    "            self.depth = parent.depth + 1\n",
+    "\n",
+    "\n",
+    "    def successors(self, agent):\n",
+    "\n",
+    "        succ_states, succ_actions, succ_costs = agent.possible_moves()\n",
+    "        children = []\n",
+    "\n",
+    "        for i in range(len(succ_states)):\n",
+    "\n",
+    "            children.append(Node(succ_states[i], self, succ_actions[i], succ_costs[i]))\n",
+    "        return  children\n",
+    "\n",
+    "    def path(self):\n",
+    "        \"\"\"Return a list of nodes forming the path from the root to this node.\"\"\"\n",
+    "        node, path_back = self, []\n",
+    "\n",
+    "        # Team init\n",
+    "        while node:\n",
+    "            path_back.append(node)\n",
+    "            node = node.parent\n",
+    "        # Team final\n",
+    "\n",
+    "        return list(reversed(path_back))\n",
+    "\n",
+    "\n",
+    "def depth_first_graph_search(agent):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Search the deepest nodes in the search tree first.\n",
+    "    Search through the successors of a problem to find a goal.\n",
+    "    The argument frontier should be an empty queue.\n",
+    "    Does not get trapped by loops.\n",
+    "    If two paths reach a state, only use the first one.\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
+    "    This initializes a frontier list with a single node representing the initial state of the agent. \n",
+    "    This is a stack, so nodes will be added and removed from the end of the list.\n",
+    "    \"\"\"\n",
+    "    frontier = [(Node(agent.initial_state))]  # Stack\n",
+    "\n",
+    "    # Team init\n",
+    "\n",
+    "\n",
+    "    # This initializes an empty set to keep track of the explored states\n",
+    "    explored = set()\n",
+    "\n",
+    "    # This starts a loop that continues until the frontier is not empty.\n",
+    "    while frontier:\n",
+    "\n",
+    "        # This pops the last element from the frontier list, \n",
+    "        # which represents the deepest unexplored node in the search tree.\n",
+    "\n",
+    "        node = frontier.pop()\n",
+    "\n",
+    "        # This checks if the state of the node is the goal state, \n",
+    "        # and if so, returns the path from the initial state to the\n",
+    "        # goal state using the node.path() method.\n",
+    "        \n",
+    "        if node.state == agent.goal_state:\n",
+    "            return node.path()  # return the path to the goal node\n",
+    "        \n",
+    "        # This adds the state of the node to the explored set.\n",
+    "        explored.add(node.state)\n",
+    "        \n",
+    "        # This loops through the possible successor states, \n",
+    "        # actions, and costs using the agent.possible_moves() method.\n",
+    "\n",
+    "        for succ_state, succ_action, succ_cost in agent.possible_moves():\n",
+    "            # This checks if the successor state has not been explored before.\n",
+    "            if succ_state not in explored:\n",
+    "                # This creates a new Node object representing the successor state, \n",
+    "                # with the node as the parent, the succ_action as the action taken \n",
+    "                # to reach the state, and succ_cost as the cost of the action.\n",
+    "                child_node = Node(succ_state, node, succ_action, succ_cost)\n",
+    "                # This adds the child_node to the end of the frontier list.\n",
+    "                frontier.append(child_node)\n",
+    "    # If the frontier becomes empty, the search has failed and None is returned.\n",
+    "    return None\n",
+    "\n",
+    "    # Team final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 1 0]\n",
+      " [0 2 1 3]\n",
+      " [1 1 1 2]]\n",
+      "{0: 10, 1: 1, 2: 5}\n",
+      "(0, 0)\n",
+      "(2, 2)\n",
+      "[[ 0  1]\n",
+      " [ 0 -1]\n",
+      " [-1  0]\n",
+      " [ 1  0]]\n",
+      "([[0, 1], [1, 0]], [[0, 1], [1, 0]], [10, 10])\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "world = np.array([[0, 0, 1, 0],\n",
+    "                  [0, 2, 1, 3],\n",
+    "                  [1, 1, 1, 2]])\n",
+    "\n",
+    "costs = {0: 10, 1: 1, 2: 5}\n",
+    "\n",
+    "initial_state = (0, 0)\n",
+    "goal_state = (2, 2)\n",
+    "\n",
+    "agent1 = Agent(world, costs, initial_state, goal_state)\n",
+    "\n",
+    "print(agent1.world)\n",
+    "print(agent1.costs)\n",
+    "print(agent1.initial_state)\n",
+    "print(agent1.goal_state)\n",
+    "\n",
+    "print(agent1.moves)\n",
+    "print(agent1.possible_moves())\n",
+    "print(agent1.world.shape[1])\n",
+    "\n",
+    "\n",
+    "#path = depth_first_graph_search(agent1)\n",
+    "#print(path)\n",
+    "\n"
    ]
   }
  ],
