--- a/AI-Ex.ipynb
+++ b/AI-Ex.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,13 +397,26 @@
     "            # 0 <= self.current_state[1] + move[1] < self.world.shape[1] is Y boundaries\n",
     "\n",
     "            if 0 <= self.current_state[0] + move[0] < self.world.shape[0] and 0 <= self.current_state[1] + move[1] < self.world.shape[1]:\n",
+    "                \n",
+    "                print(\"\\nNew data\\n\\n\")\n",
+    "                print(\"self.current_state[0]: \",self.current_state[0])\n",
+    "                print(\"move[0]: \", move[0])\n",
+    "                print(\"self.world.shape[0]: \", self.world.shape[0])\n",
     "\n",
+    "                print(\"self.current_state[1]: \",self.current_state[1])\n",
+    "                print(\"move[1]: \", move[1])\n",
+    "                print(\"self.world.shape[1]: \", self.world.shape[1])\n",
+    "\n",
+    "                print(\"move: \", move)\n",
     "                # move and assign new_state to the position after moving\n",
     "                new_state = [self.current_state[0] + move[0], self.current_state[1] + move[1]]\n",
+    "                print(\"new_state: \",new_state)\n",
     "\n",
     "                action = [move[0], move[1]]\n",
+    "                print(\"action: \",action)\n",
     "\n",
     "                cost = self.costs[self.world[new_state[0], new_state[1]]]\n",
+    "                print(\"cost: \",cost)\n",
     "\n",
     "                succ_states.append(new_state)\n",
     "                succ_actions.append(action)\n",
@@ -428,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -549,8 +562,15 @@
       " [ 0 -1]\n",
       " [-1  0]\n",
       " [ 1  0]]\n",
-      "([[0, 1], [1, 0]], [[0, 1], [1, 0]], [10, 10])\n",
-      "4\n"
+      "move:  [0 1]\n",
+      "new_state:  [0, 1]\n",
+      "action:  [0, 1]\n",
+      "cost:  10\n",
+      "move:  [1 0]\n",
+      "new_state:  [1, 0]\n",
+      "action:  [1, 0]\n",
+      "cost:  10\n",
+      "([[0, 1], [1, 0]], [[0, 1], [1, 0]], [10, 10])\n"
      ]
     }
    ],
@@ -575,7 +595,6 @@
     "\n",
     "print(agent1.moves)\n",
     "print(agent1.possible_moves())\n",
-    "print(agent1.world.shape[1])\n",
     "\n",
     "\n",
     "#path = depth_first_graph_search(agent1)\n",
