--- a/AI-Ex.ipynb
+++ b/AI-Ex.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,10 +360,20 @@
     "\n",
     "    def __init__(self, world, costs, initial_state, goal_state):\n",
     "        \n",
+    "        # Hypothesis 1\n",
+    "\n",
     "        # [0,1] --> 1 UP\n",
     "        # [0,-1] --> 1 Down\n",
     "        # [-1,0] --> 1 Left\n",
     "        # [1,0] --> 1 right\n",
+    "\n",
+    "        # Hypothesis 2\n",
+    "\n",
+    "        # [0,1] --> 1 right column\n",
+    "        # [0,-1] --> 1 left column\n",
+    "        # [-1,0] --> 1 up row\n",
+    "        # [1,0] --> 1 down row\n",
+    "\n",
     "\n",
     "        self.moves = np.array([[0,1], [0,-1], [-1,0], [1,0]])\n",
     "        self.initial_state = initial_state\n",
@@ -441,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,54 +555,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0 1 0]\n",
-      " [0 2 1 3]\n",
-      " [1 1 1 2]]\n",
-      "{0: 10, 1: 1, 2: 5}\n",
-      "(0, 0)\n",
-      "(2, 2)\n",
+      "0\n",
       "[[ 0  1]\n",
       " [ 0 -1]\n",
       " [-1  0]\n",
       " [ 1  0]]\n",
+      "\n",
+      "New data\n",
+      "\n",
+      "\n",
+      "self.current_state[0]:  0\n",
+      "move[0]:  0\n",
+      "self.world.shape[0]:  3\n",
+      "self.current_state[1]:  0\n",
+      "move[1]:  1\n",
+      "self.world.shape[1]:  4\n",
       "move:  [0 1]\n",
       "new_state:  [0, 1]\n",
       "action:  [0, 1]\n",
       "cost:  10\n",
+      "\n",
+      "New data\n",
+      "\n",
+      "\n",
+      "self.current_state[0]:  0\n",
+      "move[0]:  1\n",
+      "self.world.shape[0]:  3\n",
+      "self.current_state[1]:  0\n",
+      "move[1]:  0\n",
+      "self.world.shape[1]:  4\n",
       "move:  [1 0]\n",
       "new_state:  [1, 0]\n",
       "action:  [1, 0]\n",
-      "cost:  10\n",
-      "([[0, 1], [1, 0]], [[0, 1], [1, 0]], [10, 10])\n"
+      "cost:  1\n",
+      "([[0, 1], [1, 0]], [[0, 1], [1, 0]], [10, 1])\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "world = np.array([[0, 0, 1, 0],\n",
-    "                  [0, 2, 1, 3],\n",
+    "world = np.array([[0, 0, 1, 2],\n",
+    "                  [1, 2, 1, 3],\n",
     "                  [1, 1, 1, 2]])\n",
+    "\n",
+    "print(world[0][0])\n",
     "\n",
     "costs = {0: 10, 1: 1, 2: 5}\n",
     "\n",
     "initial_state = (0, 0)\n",
-    "goal_state = (2, 2)\n",
+    "goal_state = (3, 2)\n",
     "\n",
     "agent1 = Agent(world, costs, initial_state, goal_state)\n",
     "\n",
+    "\"\"\"\n",
     "print(agent1.world)\n",
     "print(agent1.costs)\n",
     "print(agent1.initial_state)\n",
     "print(agent1.goal_state)\n",
-    "\n",
+    "\"\"\"\n",
     "print(agent1.moves)\n",
     "print(agent1.possible_moves())\n",
     "\n",
