--- a/AI-Ex.ipynb
+++ b/AI-Ex.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -436,6 +436,7 @@
     "         output: \n",
     "                List of possible successor states, actions, and costs.\n",
     "        \"\"\"\n",
+    "\n",
     "        return succ_states, succ_actions, succ_costs\n",
     "\n",
     "\n",
@@ -451,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +470,9 @@
     "        self.path_cost = 0\n",
     "\n",
     "        if parent:\n",
-    "            self.path_cost = parent.path_cost + cost\n",
+    "            print(\"parent.path_cost: \",parent.path_cost)\n",
+    "            print(\"cost: \", cost)\n",
+    "            self.path_cost = parent.path_cost + cost[0]\n",
     "            self.depth = parent.depth + 1\n",
     "\n",
     "\n",
@@ -515,7 +518,7 @@
     "\n",
     "\n",
     "    # This initializes an empty set to keep track of the explored states\n",
-    "    explored = set()\n",
+    "    explored = []\n",
     "\n",
     "    # This starts a loop that continues until the frontier is not empty.\n",
     "    while frontier:\n",
@@ -533,21 +536,28 @@
     "            return node.path()  # return the path to the goal node\n",
     "        \n",
     "        # This adds the state of the node to the explored set.\n",
-    "        explored.add(node.state)\n",
+    "        explored.append(node.state)\n",
     "        \n",
     "        # This loops through the possible successor states, \n",
     "        # actions, and costs using the agent.possible_moves() method.\n",
+    "        succ_states, succ_actions, succ_costs = agent.possible_moves()\n",
+    "        print(succ_states)\n",
+    "        print(succ_actions)\n",
+    "        print(succ_costs)\n",
     "\n",
-    "        for succ_state, succ_action, succ_cost in agent.possible_moves():\n",
+    "        for i in range(len(succ_states)):\n",
+    "            succ_state, succ_action, succ_cost= agent.possible_moves()\n",
+    "            print(succ_state[i])\n",
     "            # This checks if the successor state has not been explored before.\n",
-    "            if succ_state not in explored:\n",
+    "            if not np.any(np.all(succ_state == explored, axis=0)):\n",
     "                # This creates a new Node object representing the successor state, \n",
     "                # with the node as the parent, the succ_action as the action taken \n",
     "                # to reach the state, and succ_cost as the cost of the action.\n",
-    "                child_node = Node(succ_state, node, succ_action, succ_cost)\n",
+    "                child_node = Node(succ_state[i], node, succ_action[i], succ_cost[i])\n",
     "                # This adds the child_node to the end of the frontier list.\n",
     "                frontier.append(child_node)\n",
     "    # If the frontier becomes empty, the search has failed and None is returned.\n",
+    "    \n",
     "    return None\n",
     "\n",
     "    # Team final"
@@ -555,63 +565,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "[[ 0  1]\n",
-      " [ 0 -1]\n",
-      " [-1  0]\n",
-      " [ 1  0]]\n",
       "\n",
       "New data\n",
       "\n",
       "\n",
       "self.current_state[0]:  0\n",
       "move[0]:  0\n",
-      "self.world.shape[0]:  3\n",
+      "self.world.shape[0]:  2\n",
       "self.current_state[1]:  0\n",
       "move[1]:  1\n",
-      "self.world.shape[1]:  4\n",
+      "self.world.shape[1]:  2\n",
       "move:  [0 1]\n",
       "new_state:  [0, 1]\n",
       "action:  [0, 1]\n",
-      "cost:  10\n",
+      "cost:  [1]\n",
       "\n",
       "New data\n",
       "\n",
       "\n",
       "self.current_state[0]:  0\n",
       "move[0]:  1\n",
-      "self.world.shape[0]:  3\n",
+      "self.world.shape[0]:  2\n",
       "self.current_state[1]:  0\n",
       "move[1]:  0\n",
-      "self.world.shape[1]:  4\n",
+      "self.world.shape[1]:  2\n",
       "move:  [1 0]\n",
       "new_state:  [1, 0]\n",
       "action:  [1, 0]\n",
-      "cost:  1\n",
-      "([[0, 1], [1, 0]], [[0, 1], [1, 0]], [10, 1])\n"
+      "cost:  [5]\n",
+      "[[0, 1], [1, 0]]\n",
+      "[[0, 1], [1, 0]]\n",
+      "[[1], [5]]\n",
+      "\n",
+      "New data\n",
+      "\n",
+      "\n",
+      "self.current_state[0]:  0\n",
+      "move[0]:  0\n",
+      "self.world.shape[0]:  2\n",
+      "self.current_state[1]:  0\n",
+      "move[1]:  1\n",
+      "self.world.shape[1]:  2\n",
+      "move:  [0 1]\n",
+      "new_state:  [0, 1]\n",
+      "action:  [0, 1]\n",
+      "cost:  [1]\n",
+      "\n",
+      "New data\n",
+      "\n",
+      "\n",
+      "self.current_state[0]:  0\n",
+      "move[0]:  1\n",
+      "self.world.shape[0]:  2\n",
+      "self.current_state[1]:  0\n",
+      "move[1]:  0\n",
+      "self.world.shape[1]:  2\n",
+      "move:  [1 0]\n",
+      "new_state:  [1, 0]\n",
+      "action:  [1, 0]\n",
+      "cost:  [5]\n",
+      "[0, 1]\n"
+     ]
+    },
+    {
+     "ename": "AxisError",
+     "evalue": "axis 1 is out of bounds for array of dimension 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAxisError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[33], line 22\u001b[0m\n\u001b[0;32m     11\u001b[0m agent1 \u001b[39m=\u001b[39m Agent(world, costs, initial_state, goal_state)\n\u001b[0;32m     13\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[39mprint(agent1.world)\u001b[39;00m\n\u001b[0;32m     15\u001b[0m \u001b[39mprint(agent1.costs)\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[39mprint(agent1.possible_moves())\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m---> 22\u001b[0m path \u001b[39m=\u001b[39m depth_first_graph_search(agent1)\n\u001b[0;32m     23\u001b[0m \u001b[39mprint\u001b[39m(path)\n",
+      "Cell \u001b[1;32mIn[32], line 93\u001b[0m, in \u001b[0;36mdepth_first_graph_search\u001b[1;34m(agent)\u001b[0m\n\u001b[0;32m     91\u001b[0m \u001b[39mprint\u001b[39m(succ_state[i])\n\u001b[0;32m     92\u001b[0m \u001b[39m# This checks if the successor state has not been explored before.\u001b[39;00m\n\u001b[1;32m---> 93\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m np\u001b[39m.\u001b[39many(np\u001b[39m.\u001b[39;49mall(succ_state \u001b[39m==\u001b[39;49m explored, axis\u001b[39m=\u001b[39;49m\u001b[39m1\u001b[39;49m)):\n\u001b[0;32m     94\u001b[0m     \u001b[39m# This creates a new Node object representing the successor state, \u001b[39;00m\n\u001b[0;32m     95\u001b[0m     \u001b[39m# with the node as the parent, the succ_action as the action taken \u001b[39;00m\n\u001b[0;32m     96\u001b[0m     \u001b[39m# to reach the state, and succ_cost as the cost of the action.\u001b[39;00m\n\u001b[0;32m     97\u001b[0m     child_node \u001b[39m=\u001b[39m Node(succ_state[i], node, succ_action[i], succ_cost[i])\n\u001b[0;32m     98\u001b[0m     \u001b[39m# This adds the child_node to the end of the frontier list.\u001b[39;00m\n",
+      "File \u001b[1;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mall\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\wdmoreno\\Anaconda3\\envs\\proba\\lib\\site-packages\\numpy\\core\\fromnumeric.py:2489\u001b[0m, in \u001b[0;36mall\u001b[1;34m(a, axis, out, keepdims, where)\u001b[0m\n\u001b[0;32m   2406\u001b[0m \u001b[39m@array_function_dispatch\u001b[39m(_all_dispatcher)\n\u001b[0;32m   2407\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mall\u001b[39m(a, axis\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, out\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, keepdims\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39m_NoValue, \u001b[39m*\u001b[39m, where\u001b[39m=\u001b[39mnp\u001b[39m.\u001b[39m_NoValue):\n\u001b[0;32m   2408\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   2409\u001b[0m \u001b[39m    Test whether all array elements along a given axis evaluate to True.\u001b[39;00m\n\u001b[0;32m   2410\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   2487\u001b[0m \n\u001b[0;32m   2488\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 2489\u001b[0m     \u001b[39mreturn\u001b[39;00m _wrapreduction(a, np\u001b[39m.\u001b[39;49mlogical_and, \u001b[39m'\u001b[39;49m\u001b[39mall\u001b[39;49m\u001b[39m'\u001b[39;49m, axis, \u001b[39mNone\u001b[39;49;00m, out,\n\u001b[0;32m   2490\u001b[0m                           keepdims\u001b[39m=\u001b[39;49mkeepdims, where\u001b[39m=\u001b[39;49mwhere)\n",
+      "File \u001b[1;32mc:\\Users\\wdmoreno\\Anaconda3\\envs\\proba\\lib\\site-packages\\numpy\\core\\fromnumeric.py:86\u001b[0m, in \u001b[0;36m_wrapreduction\u001b[1;34m(obj, ufunc, method, axis, dtype, out, **kwargs)\u001b[0m\n\u001b[0;32m     83\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     84\u001b[0m             \u001b[39mreturn\u001b[39;00m reduction(axis\u001b[39m=\u001b[39maxis, out\u001b[39m=\u001b[39mout, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mpasskwargs)\n\u001b[1;32m---> 86\u001b[0m \u001b[39mreturn\u001b[39;00m ufunc\u001b[39m.\u001b[39mreduce(obj, axis, dtype, out, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mpasskwargs)\n",
+      "\u001b[1;31mAxisError\u001b[0m: axis 1 is out of bounds for array of dimension 0"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "world = np.array([[0, 0, 1, 2],\n",
-    "                  [1, 2, 1, 3],\n",
-    "                  [1, 1, 1, 2]])\n",
+    "world = np.array([[0, 1],\n",
+    "                  [2, 3]])\n",
     "\n",
-    "print(world[0][0])\n",
-    "\n",
-    "costs = {0: 10, 1: 1, 2: 5}\n",
+    "costs = {0: 10, 1: 1, 2: 5, 3:100}\n",
     "\n",
     "initial_state = (0, 0)\n",
-    "goal_state = (3, 2)\n",
+    "goal_state = (1,1)\n",
     "\n",
     "agent1 = Agent(world, costs, initial_state, goal_state)\n",
     "\n",
@@ -620,13 +668,12 @@
     "print(agent1.costs)\n",
     "print(agent1.initial_state)\n",
     "print(agent1.goal_state)\n",
-    "\"\"\"\n",
     "print(agent1.moves)\n",
     "print(agent1.possible_moves())\n",
+    "\"\"\"\n",
     "\n",
-    "\n",
-    "#path = depth_first_graph_search(agent1)\n",
-    "#print(path)\n",
+    "path = depth_first_graph_search(agent1)\n",
+    "print(path)\n",
     "\n"
    ]
   }
