--- a/AI-Ex.ipynb
+++ b/AI-Ex.ipynb
@@ -219,6 +219,8 @@
     "    \"\"\"\n",
     "    frontier = [(Node(agent.initial_state))]  # Stack\n",
     "\n",
+    "\n",
+    "\n",
     "    # Team init\n",
     "\n",
     "\n",
@@ -408,16 +410,7 @@
     "\n",
     "            if 0 <= self.current_state[0] + move[0] < self.world.shape[0] and 0 <= self.current_state[1] + move[1] < self.world.shape[1]:\n",
     "                \n",
-    "                print(\"\\nNew data\\n\\n\")\n",
-    "                print(\"self.current_state[0]: \",self.current_state[0])\n",
-    "                print(\"move[0]: \", move[0])\n",
-    "                print(\"self.world.shape[0]: \", self.world.shape[0])\n",
     "\n",
-    "                print(\"self.current_state[1]: \",self.current_state[1])\n",
-    "                print(\"move[1]: \", move[1])\n",
-    "                print(\"self.world.shape[1]: \", self.world.shape[1])\n",
-    "\n",
-    "                print(\"move: \", move)\n",
     "                # move and assign new_state to the position after moving\n",
     "                new_state = [self.current_state[0] + move[0], self.current_state[1] + move[1]]\n",
     "                print(\"new_state: \",new_state)\n",
@@ -481,8 +474,6 @@
     "        self.path_cost = 0\n",
     "\n",
     "        if parent:\n",
-    "            print(\"parent.path_cost: \",parent.path_cost)\n",
-    "            print(\"cost: \", cost)\n",
     "            self.path_cost = parent.path_cost + cost\n",
     "            self.depth = parent.depth + 1\n",
     "\n",
@@ -508,75 +499,12 @@
     "        # Team final\n",
     "\n",
     "        return list(reversed(path_back))\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "def depth_first_graph_search(agent):\n",
-    "\n",
-    "    #Search the deepest nodes in the search tree first.\n",
-    "    #Search through the successors of a problem to find a goal.\n",
-    "    #The argument frontier should be an empty queue.\n",
-    "    #Does not get trapped by loops.\n",
-    "    #If two paths reach a state, only use the first one.\n",
-    "\n",
-    "    #This initializes a frontier list with a single node representing the initial state of the agent. \n",
-    "    #This is a stack, so nodes will be added and removed from the end of the list.\n",
-    "\n",
-    "    frontier = [(Node(agent.initial_state))]  # Stack\n",
-    "\n",
-    "    # Team init\n",
-    "\n",
-    "\n",
-    "    # This initializes an empty set to keep track of the explored states\n",
-    "    explored = []\n",
-    "\n",
-    "    # This starts a loop that continues until the frontier is not empty.\n",
-    "    while frontier:\n",
-    "\n",
-    "        # This pops the last element from the frontier list, \n",
-    "        # which represents the deepest unexplored node in the search tree.\n",
-    "\n",
-    "        node = frontier.pop()\n",
-    "\n",
-    "        # This checks if the state of the node is the goal state, \n",
-    "        # and if so, returns the path from the initial state to the\n",
-    "        # goal state using the node.path() method.\n",
-    "        \n",
-    "        if node.state == agent.goal_state:\n",
-    "            return node.path()  # return the path to the goal node\n",
-    "        \n",
-    "        # This adds the state of the node to the explored set.\n",
-    "        explored.append(node.state)\n",
-    "        \n",
-    "        # This loops through the possible successor states, \n",
-    "        # actions, and costs using the agent.possible_moves() method.\n",
-    "        succ_states, succ_actions, succ_costs = agent.possible_moves()\n",
-    "        print(succ_states)\n",
-    "        print(succ_actions)\n",
-    "        print(succ_costs)\n",
-    "\n",
-    "        for i in range(len(succ_states)):\n",
-    "            succ_state, succ_action, succ_cost= agent.possible_moves()\n",
-    "            print(succ_state[i])\n",
-    "            # This checks if the successor state has not been explored before.\n",
-    "            if not np.any(np.all(succ_state == explored, axis=0)):\n",
-    "                # This creates a new Node object representing the successor state, \n",
-    "                # with the node as the parent, the succ_action as the action taken \n",
-    "                # to reach the state, and succ_cost as the cost of the action.\n",
-    "                child_node = Node(succ_state[i], node, succ_action[i], succ_cost[i])\n",
-    "                # This adds the child_node to the end of the frontier list.\n",
-    "                frontier.append(child_node)\n",
-    "    # If the frontier becomes empty, the search has failed and None is returned.\n",
-    "    \n",
-    "    return None\n",
-    "\n",
-    "    # Team final\n",
-    "\"\"\""
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,6 +521,17 @@
     "    explored = []\n",
     "\n",
     "    while frontier:\n",
+    "        print(frontier)\n",
+    "        if len(frontier)==1:\n",
+    "            print(\"frontier[0].state: \", frontier[0].state)\n",
+    "            print(\"frontier[0].parent: \", frontier[0].parent)\n",
+    "            print(\"frontier[0].action: \", frontier[0].action)\n",
+    "            print(\"\\n\")\n",
+    "        if len(frontier)==2:\n",
+    "            print(\"frontier[1].state: \", frontier[1].state)\n",
+    "            print(\"frontier[1].parent: \", frontier[1].parent)\n",
+    "            print(\"frontier[1].action: \", frontier[1].action)\n",
+    "\n",
     "        node = frontier.pop()\n",
     "\n",
     "        if node.state == agent.goal_state:\n",
@@ -616,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,13 +577,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[<__main__.Node object at 0x0000020B14B53E20>]\n",
+      "frontier[0].state:  (0, 0)\n",
+      "frontier[0].parent:  None\n",
+      "frontier[0].action:  None\n",
+      "\n",
+      "\n",
       "\n",
       "New data\n",
       "\n",
@@ -677,7 +622,11 @@
       "cost:  1\n",
       "parent.path_cost:  0\n",
       "cost:  5\n",
-      "Frontier:  [<__main__.Node object at 0x0000020B14B60BE0>, <__main__.Node object at 0x0000020B14B60970>]\n",
+      "Frontier:  [<__main__.Node object at 0x0000020B14B06A30>, <__main__.Node object at 0x0000020B05E99640>]\n",
+      "[<__main__.Node object at 0x0000020B14B06A30>, <__main__.Node object at 0x0000020B05E99640>]\n",
+      "frontier[1].state:  [1, 0]\n",
+      "frontier[1].parent:  <__main__.Node object at 0x0000020B14B53E20>\n",
+      "frontier[1].action:  [1, 0]\n",
       "\n",
       "New data\n",
       "\n",
@@ -708,7 +657,11 @@
       "cost:  5\n",
       "parent.path_cost:  5\n",
       "cost:  1\n",
-      "Frontier:  [<__main__.Node object at 0x0000020B14B60BE0>, <__main__.Node object at 0x0000020B14B60640>]\n",
+      "Frontier:  [<__main__.Node object at 0x0000020B14B06A30>, <__main__.Node object at 0x0000020B05E99310>]\n",
+      "[<__main__.Node object at 0x0000020B14B06A30>, <__main__.Node object at 0x0000020B05E99310>]\n",
+      "frontier[1].state:  [0, 1]\n",
+      "frontier[1].parent:  <__main__.Node object at 0x0000020B05E99640>\n",
+      "frontier[1].action:  [0, 1]\n",
       "\n",
       "New data\n",
       "\n",
@@ -737,7 +690,13 @@
       "new_state:  [1, 0]\n",
       "action:  [1, 0]\n",
       "cost:  5\n",
-      "Frontier:  [<__main__.Node object at 0x0000020B14B60BE0>]\n",
+      "Frontier:  [<__main__.Node object at 0x0000020B14B06A30>]\n",
+      "[<__main__.Node object at 0x0000020B14B06A30>]\n",
+      "frontier[0].state:  [0, 1]\n",
+      "frontier[0].parent:  <__main__.Node object at 0x0000020B14B53E20>\n",
+      "frontier[0].action:  [0, 1]\n",
+      "\n",
+      "\n",
       "\n",
       "New data\n",
       "\n",
